--- a/public/index.html
+++ b/public/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" style="height:100%;">
 
 <head>
   <meta charset="utf-8">
   <title>Hungry-vue</title>
 </head>
 
-<body style="margin: 0px;padding: 0px">
-  <div id="app"></div>
+<body style="margin: 0px;padding: 0px;height: 100%;">
+  <div id="app" style="height: 100%;"></div>
 </body>
 
 </html>
